--- a/.github/workflows/deploy-app-to-aws.yaml
+++ b/.github/workflows/deploy-app-to-aws.yaml
@@ -4,6 +4,12 @@ on:
       - main
       - github-actions
       - feature/*
+
+# Require token generation access to authenticate with AWS OIDC
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -25,6 +31,7 @@ jobs:
         with:
           role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ vars.AWS_REGION }}
+
 
       - name: "DEBUG: check identity"
         run: aws sts get-caller-identity
