--- a/.github/workflows/deploy-app-to-aws.yaml
+++ b/.github/workflows/deploy-app-to-aws.yaml
@@ -47,6 +47,7 @@ jobs:
         env:
           WATCHMODE_API_KEY: ${{ secrets.WATCHMODE_API_KEY }}
         run: >
+          echo $WATCHMODE_API_KEY | wc -l &&
           sam deploy
             --stack-name "$STACK_NAME"
             --profile "$PROFILE"
