--- a/.github/workflows/teardown-app.yaml
+++ b/.github/workflows/teardown-app.yaml
@@ -1,10 +1,9 @@
-name: Deploy TV Event Streaming App
+name: Delete TV Event Streaming App
 on:
   workflow_dispatch:
 
   delete:
     branches:
-      - github-actions
       - feature/*
 
 # Require token generation access to authenticate with AWS OIDC
