save first attempt at UI test suite and extract cognitor user service

--- a/cloudformation/uktv-event-streaming-app.yaml
+++ b/cloudformation/uktv-event-streaming-app.yaml
@@ -126,8 +126,8 @@ Resources:
       Parameters:
         RootStackName: !Ref AWS::StackName
         WebsiteDistributionDomainName: !GetAtt WebsiteDistribution.DomainName
-        TestUserName: !Ref TestUserName
-        AdminUserName: !Ref AdminUserName
+        UserNames: !Sub "${TestUserName},${AdminUserName}"
+        AdminUserNames: !Ref AdminUserName
 
   AdminApiApp:
     Type: AWS::Serverless::Application
