--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-export TEST_USERNAME="test.user@example.com"
-export ADMIN_USERNAME="admin.user@example.com"
-export TEST_USER_PASSWORD="24n9j3Gklwjfr873"
-export ADMIN_USER_PASSWORD="823nfKJR£jnfjikemf"
-export STACK_NAME="tv-event-streaming-gha"
-export REGION="eu-west-2"
+#!/bin/bash
+TEST_USERNAME="test.user@example.com"
+ADMIN_USERNAME="admin.user@example.com"
+TEST_USER_PASSWORD="24n9j3Gklwjfr873"
+ADMIN_USER_PASSWORD="823nfKJR£jnfjikemf"
+STACK_NAME="tv-event-streaming-gha"
+REGION="eu-west-2"
+AWS_REGION="eu-west-2"
+AWS_PROFILE="streaming"
