--- a/.github/workflows/deploy-app-to-aws.yaml
+++ b/.github/workflows/deploy-app-to-aws.yaml
@@ -69,4 +69,42 @@ jobs:
       - name: Clear Cloudfront cache
         run: bash ./github/scripts/clear-cloudfront-cache.sh ${STACK_NAME} ${REGION}
 
+      # --- UI Testing Steps ---
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
 
+      - name: Install Test Dependencies
+        working-directory: ./tests/ui
+        run: npm ci
+
+      - name: Install Playwright Browsers
+        working-directory: ./tests/ui
+        run: npx playwright install --with-deps
+
+      - name: Configure Test Environment
+        working-directory: ./tests/ui
+        env:
+          TEST_USER_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
+          ADMIN_USER_PASSWORD: ${{ secrets.ADMIN_USER_PASSWORD }}
+        run: |
+          # Fetch stack outputs to populate .env with URL and Client IDs
+          ./scripts/fetch-stack-outputs.sh "$STACK_NAME" "$REGION" "default"
+          
+          # Explicitly append passwords (not in stack outputs)
+          echo "TEST_USER_PASSWORD=$TEST_USER_PASSWORD" >> .env
+          echo "ADMIN_USER_PASSWORD=$ADMIN_USER_PASSWORD" >> .env
+
+      - name: Run UI Tests
+        working-directory: ./tests/ui
+        run: npm test
+
+      - name: Upload Test Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report
+          path: tests/ui/playwright-report/
+          retention-days: 5
