some fixes to the deployment

--- a/src/add_cognito_user/requirements.txt
+++ b/src/add_cognito_user/requirements.txt
@@ -1,2 +1,2 @@
-# boto3 is included in the Lambda runtime, no additional dependencies needed
-
+# boto3 is included in the Lambda runtime
+cfn-response
