--- a/cloudformation/uktv-event-streaming-app.yaml
+++ b/cloudformation/uktv-event-streaming-app.yaml
@@ -230,6 +230,9 @@ Outputs:
   TestUsername:
     Description: "The username of the pre-created test user"
     Value: !GetAtt CognitoApp.Outputs.TestUsername
+  UserPasswords:
+    Description: "JSON map of username to password for all created users"
+    Value: !GetAtt CognitoApp.Outputs.UserPasswords
   UserPreferencesApiEndpoint:
     Description: "The User Preferences API endpoint URL"
     Value: !GetAtt UserPreferencesApp.Outputs.ApiEndpoint
