--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ build
 .DS_Store
 local-secrets.json
 .venv
+# Environment files - should never be committed
 .env
+.env.*
+*.env
+!*.env.example
 /.aws-sam/
-.env
