Add KMS permissions for encryption in CloudFormation template
- Include permissions for creating and managing KMS keys to enhance encryption capabilities, specifically for Kinesis stream encryption.

--- a/github/cloudformation/gh-actions-role.yaml
+++ b/github/cloudformation/gh-actions-role.yaml
@@ -77,6 +77,8 @@ Resources:
                   - scheduler:*
                   # For managing EventBridge triggers
                   - events:*
+                  # For creating and managing KMS keys for encryption (e.g., Kinesis stream encryption)
+                  - kms:*
                 Resource: "*"
               # Restricted S3 permissions for SAM deployment bucket only
               - Effect: Allow
