--- a/cloudformation/user-preferences.yaml
+++ b/cloudformation/user-preferences.yaml
@@ -11,6 +11,12 @@ Parameters:
     Type: String
   UserPoolArn:
     Type: String
+  ApiDomainName:
+    Type: String
+    Description: "Custom domain name for the API (required for explicit TLS configuration via Domain SecurityPolicy)"
+  ApiCertificateArn:
+    Type: String
+    Description: "ACM certificate ARN for the custom domain (required for explicit TLS configuration)"
 
 Resources:
   # The API Gateway, with the OpenAPI spec now inlined for validation.
@@ -18,10 +24,11 @@ Resources:
     Type: AWS::Serverless::Api
     Properties:
       StageName: Prod
-      # Note: Minimum TLS version for REST APIs without custom domains must be set at the account level.
-      # Ensure TLS 1.2 minimum is configured via AWS CLI or Console:
-      # aws apigateway update-account --patch-ops '[{"op":"replace","path":"/minimumCompressionSize","value":0}]'
-      # Or via Console: API Gateway > Settings > Edit > Minimum TLS version: TLS 1.2
+      # Explicitly configure minimum TLS version to TLS 1.2 via Domain SecurityPolicy
+      Domain:
+        SecurityPolicy: TLS_1_2
+        DomainName: !Ref ApiDomainName
+        CertificateArn: !Ref ApiCertificateArn
       MethodSettings:
         - ResourcePath: '/*'
           HttpMethod: '*'
